ESM-466, ESM-453: refactor to single controller for detail/create/edit.  Add in confirms for unsaved changes, add in delete.  Remove delete link from listing (match VC).

--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -4,6 +4,9 @@
     <h1>Project Update &nbsp;&rsaquo;&nbsp; {{s.communication.name}} <span clas="placeholder-value" ng-if="!s.communication.name">Untitled</span></h1>
     <div class="actions">
         <button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
+      <button class="btn btn-danger btn-sm"
+              ng-if="canDelete"
+              ng-click="delete(s.communication)"><span class="glyphicon glyphicon-remove"></span><span>Delete</span></button>
         <button type="button" class="btn btn-primary btn-sm" ng-click="save(projectUpdateForm.$valid)">Save</button>
         <button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)">Send</button>
     </div>
@@ -109,8 +112,11 @@
     <div class="form-footer">
         <div class="pull-right">
           <button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
+          <button class="btn btn-danger btn-sm"
+                  ng-if="canDelete"
+                  ng-click="delete(s.communication)"><span class="glyphicon glyphicon-remove"></span><span>Delete</span></button>
           <button type="button" class="btn btn-primary btn-sm" ng-click="save(projectUpdateForm.$valid)">Save</button>
-          <button type="button" class="btn btn-success btn-sm" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)">Send</button>
+          <button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)">Send</button>
         </div>
     </div>
 
