--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -93,12 +93,12 @@
 
 		<div class="panel panel-default">
 			<div class="panel-heading flex-row">
-				<h2>Actions</h2>
+				<h2>Enforcement Actions</h2>
 				<div class="actions">
 					<button class="btn btn-default btn-sm"
 						ng-if="project.userCan.createInspectionReport"
 						ng-click="openAddEnforcementAction()">
-						<span class="glyphicon glyphicon-plus"></span><span>Add Action</span>
+						<span class="glyphicon glyphicon-plus"></span><span>Add Enforcement Action</span>
 					</button>
 				</div>
 			</div>
