--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -62,7 +62,7 @@
 	
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h2>Actions</h2>
+			<h2>Enforcment Actions</h2>
 		</div>
 		<div class="list-group no-border">
 			<div class="list-group-item" ng-if="ir.enforcementActions == 0">No Actions available</div>
