ESM-450 Notifications UI Dev
- Quickly adding some markup in to allow the dev to hook up functionality
- Updating the Save button to include iconography

Other
- Updated naming convention in artifact-linker.html ('ADD' vs 'OK')

--- a/modules/artifacts/client/views/artifact-linker.html
+++ b/modules/artifacts/client/views/artifact-linker.html
@@ -19,7 +19,7 @@
 <div class="modal-footer">
     <div>
         <button class="btn btn-default" href ng-click="self.cancel()">Cancel</button>
-        <button class="btn btn-primary" href ng-click="self.ok()">Ok</button>
+        <button class="btn btn-primary" href ng-click="self.ok()">Add</button>
     </div>
 </div>
     
