--- a/modules/communications/client/views/communication-view.html
+++ b/modules/communications/client/views/communication-view.html
@@ -1,5 +1,5 @@
   <div class="view-title-container flex-row">
-    <h1>Project Updates &nbsp;&rsaquo;&nbsp; {{s.communication.name}}</h1>
+    <h1>Project Update &nbsp;&rsaquo;&nbsp; {{s.communication.name}}</h1>
     <div class="actions">
       <button class="btn btn-default btn-sm" ui-sref="p.communication.list">Cancel</button>
       <button class="btn btn-default btn-sm"
