--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -9,8 +9,8 @@
 			<button class="btn btn-danger btn-sm"
 	            ng-if="canDelete"
 	            ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
-			<button class="btn btn-primary btn-sm"
-				ng-click="save()">Save</button>
+			<button class="btn btn-default btn-sm"
+				ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
 			<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#publishNotify"
 				ng-if="canUnpublish"
 				ng-click="unpublish()"><span class="glyphicon glyphicon-minus-sign"></span><span>Unpublish</span></button>
@@ -116,8 +116,8 @@
 				<button class="btn btn-danger btn-sm"
 					ng-if="canDelete"
 					ng-click="delete()"><span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
-				<button class="btn btn-primary btn-sm"
-					ng-click="save()">Save</button>
+				<button class="btn btn-default btn-sm"
+					ng-click="save()"><span class="glyphicon glyphicon-save"></span><span>Save</span></button>
 			</div>
 		</div>
 
