--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -66,6 +66,39 @@
 		</div>
 		<div class="list-group no-border">
 			<div class="list-group-item" ng-if="ir.enforcementActions == 0">No Actions available</div>
+
+			<table class="hidden table table-hover table-striped" ng-table="tableParams" show-filter="false">
+				<tr class="clickable" ui-sref="p.ir.detail({irId:o._id})">
+					<td class="enforcement-col"
+					 	header-class="'enforcement-col'"
+						data-title="'Actions'" 
+						sortable="'name'">
+						<strong class="enforcement-name">Action</strong>
+						<a class="condition-link" href="#">Link to Enforcment Condition</a>
+					</td>
+					<td class="status-col"
+				 		header-class="'status-col'"
+						data-title="'Status'"
+						sortable="'status'">
+						<span class="label label-default">Label</span>
+					</td>
+					<td class="date-col"
+						header-class="actions-col action-x"
+						sortable="'Date'">MMM DD, YYYY</td>
+					<td class="actions-col action-x2" header-class="'actions-col action-x2'">
+						<a class="btn btn-default btn-sm" ng-click="$event.stopPropagation()">
+							<span class="glyphicon glyphicon-pencil"></span>
+						</a>
+						<a class="btn btn-default btn-sm" ng-click="$event.stopPropagation()">
+							<span class="glyphicon glyphicon-trash"></span>
+						</a>
+					</td>
+					<tr ng-show="!$data || !$data.length">
+						<td colspan="4">No records found.</td>
+					</tr>
+				</tr>
+			</table>
+
 			<div ng-repeat="o in ir.enforcementActions">
 				<div>
 					<label>Action</label>
