Adding in IR action back-end.

--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -111,7 +111,7 @@
 				</div>
 				<div>
 					<label>Date</label>
-					<div>{{o.date}}</div>
+					<div>{{o.actionDate}}</div>
 				</div>
 			</div>
 		</div>
