--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -102,25 +102,26 @@
 					</button>
 				</div>
 			</div>
-			<table class="table table-hover table-striped" ng-table="tableParams" show-filter="false">
-				<tr class="clickable" ui-sref="p.ir.detail({irId:o._id})">
+			<table ng-table="tableParams" class="table table-hover table-striped">
+				<tr class="clickable" ui-sref="p.ir.detail({irId:o._id})" ng-repeat="o in ir.enforcementActions">
 					<td class="enforcement-col"
-					 	header-class="'enforcement-col'"
-						data-title="'Actions'" 
-						sortable="'name'">
-						<strong class="enforcement-name">Action</strong>
-						<a class="condition-link" href="#">Link to Enforcment Condition</a>
+						data-title="'Action'" 
+						sortable="'o.action'">
+						<strong class="enforcement-name">{{o.action}}</strong>
+						<a class="condition-link" ui-sref="p.ir.condition({irId:o._id})">{{o.condition}}</a>
 					</td>
 					<td class="status-col"
 				 		header-class="'status-col'"
 						data-title="'Status'"
 						sortable="'status'">
-						<span class="label label-default">Label</span>
+						<span class="label label-default">{{o.status}}</span>
 					</td>
 					<td class="date-col"
-						header-class="actions-col action-x"
-						sortable="'Date'">MMM DD, YYYY</td>
-					<td class="actions-col action-x2" header-class="'actions-col actions-x2'">
+						header-class="'date-col'"
+						data-title="'Date'"
+						sortable="'date'">{{o.actionDate}}</td>
+					<td class="actions-col action-x2" 
+						header-class="'actions-x2'">
 						<a class="btn btn-default btn-sm" ng-click="$event.stopPropagation()">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
@@ -128,8 +129,8 @@
 							<span class="glyphicon glyphicon-trash"></span>
 						</a>
 					</td>
-					<tr ng-show="!$data || !$data.length">
-						<td colspan="4">No records found.</td>
+					<tr ng-show="ir.enforcementActions.length == 0">
+						<td colspan="4">No Enforcement Actions found</td>
 					</tr>
 				</tr>
 			</table>
