ESM-456 - Inspection UI Development
- Cleaned up status indicators for enforcement actions table
- Added the ng-table component to display the enforcement actions in ir-view.html
- Cleaned up the column spacing for ir-edit.html and ir-view.html

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -4243,6 +4243,21 @@ section {
 	}
 }
 
+.enforcement-table {
+	.date-col {
+		width: 14rem;
+		text-align: right;
+	}
+
+	.status-col {
+		width: 14rem;
+
+		.label {
+			min-width: 8rem;
+		}
+	}
+}
+
 .enforcement-name {
 	display: block;
 }
