--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -62,59 +62,34 @@
 	
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h2>Enforcment Actions</h2>
+			<h2>Enforcement Actions</h2>
 		</div>
-		<div class="list-group no-border">
-			<div class="list-group-item" ng-if="ir.enforcementActions == 0">No Actions available</div>
-
-			<table class="hidden table table-hover table-striped" ng-table="tableParams" show-filter="false">
-				<tr class="clickable" ui-sref="p.ir.detail({irId:o._id})">
-					<td class="enforcement-col"
-					 	header-class="'enforcement-col'"
-						data-title="'Actions'" 
-						sortable="'name'">
-						<strong class="enforcement-name">Action</strong>
-						<a class="condition-link" href="#">Link to Enforcment Condition</a>
-					</td>
-					<td class="status-col"
-				 		header-class="'status-col'"
-						data-title="'Status'"
-						sortable="'status'">
-						<span class="label label-default">Label</span>
-					</td>
-					<td class="date-col"
-						header-class="actions-col action-x"
-						sortable="'Date'">MMM DD, YYYY</td>
-					<td class="actions-col action-x2" header-class="'actions-col action-x2'">
-						<a class="btn btn-default btn-sm" ng-click="$event.stopPropagation()">
-							<span class="glyphicon glyphicon-pencil"></span>
-						</a>
-						<a class="btn btn-default btn-sm" ng-click="$event.stopPropagation()">
-							<span class="glyphicon glyphicon-trash"></span>
-						</a>
-					</td>
-					<tr ng-show="!$data || !$data.length">
-						<td colspan="4">No records found.</td>
-					</tr>
+		<table ng-table="tableParams" class="enforcement-table table table-hover">
+			<tr class="clickable" ui-sref="p.ir.detail({irId:o._id})" ng-repeat="o in ir.enforcementActions">
+				<td class="enforcement-col"
+					data-title="'Action'" 
+					sortable="'o.action'">
+					<strong class="enforcement-name">{{o.action}}</strong>
+					<a class="condition-link" ui-sref="p.ir.condition({irId:o._id})">Condition Link goes here</a>
+				</td>
+				<td class="status-col"
+					header-class="'status-col'"
+					data-title="'Status'"
+					sortable="'status'">
+					<span class="label"
+						ng-class="{'label-primary': o.status == 'Open',
+									'label-success': o.status == 'Resolved',
+									'label-default': o.status == 'Recinded'}">{{o.status}}</span>
+				</td>
+				<td class="date-col"
+					header-class="'date-col'"
+					data-title="'Date Issued'"
+					sortable="'date'">{{o.actionDate | date:'MMM dd, yyyy'}}</td>
+				<tr ng-show="ir.enforcementActions.length == 0">
+					<td colspan="3">No Enforcement Actions found</td>
 				</tr>
-			</table>
-
-			<div ng-repeat="o in ir.enforcementActions">
-				<div>
-					<label>Action</label>
-					<div>{{o.action}}</div>
-					<div>{{o.condition}}</div>
-				</div>
-				<div>
-					<label>Status</label>
-					<div>{{o.status}}</div>
-				</div>
-				<div>
-					<label>Date</label>
-					<div>{{o.actionDate}}</div>
-				</div>
-			</div>
-		</div>
+			</tr>
+		</table>
 	</div>
 
 	<div class="form-footer no-border clearfix hidden">
