--- a/modules/project-conditions/client/views/projectcondition-list.html
+++ b/modules/project-conditions/client/views/projectcondition-list.html
@@ -6,7 +6,7 @@
 
 <div class="view-body-container">
 	<div class="button-bar clearfix">
-		<a ng-if="showedit" class="btn btn-default btn-sm" ui-sref="p.projectcondition.create()">
+		<a ng-if="project.userCan.createProjectCondition" class="btn btn-default btn-sm" ui-sref="p.projectcondition.create()">
 			<span class="glyphicon glyphicon-plus"></span>
 			<span>Add Condition</span>
 		</a>
@@ -17,11 +17,10 @@
 	<section class="panel panel-default">
 		<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 			<tr ng-repeat="o in $data" ui-sref="p.projectcondition.detail({conditionId:o._id})" class="clickable">
-				<td data-title="'Sector'"  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="ptypes" >{{o.sector}}</td>
 				<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'" >{{o.name}}</td>
 				<td data-title="'Subject'" filter="{'subject':'text'}"    sortable="'subject'" >{{o.subject}}</td>
-				<td data-title="'Stages'"   filter="{'stages':'text'}"  sortable="'stages'" >{{o.stageString}}</td>
-				<td data-title="'Pillars'"  filter="{'pillars':'text'}" sortable="'pillars'"  >{{o.pillarString}}</td>
+				<td data-title="'Stage'"   filter="{'stage':'text'}"  sortable="'stage'" >{{o.stage}}</td>
+				<td data-title="'Phases'"   filter="{'phases':'text'}"  sortable="'phases'" >{{o.phases.join(', ')}}</td>
 				<td class="actions-col action-x2" header-class="'actions-col action-x2'">
 					<a class="btn btn-link btn-sm" ng-if="showedit" ng-click="$event.stopPropagation()" ui-sref="p.projectcondition.edit({conditionId:o._id})">
 						<span class="glyphicon glyphicon-pencil"></span>
