--- a/modules/utils/client/views/partials/entity-select-modal.html
+++ b/modules/utils/client/views/partials/entity-select-modal.html
@@ -5,11 +5,12 @@
 
 <div class="modal-body">
 	<section class="panel panel-default no-margin add-vc-table">
-		<table class="table table-scroll add-valued-component-table" ng-table="self.tableParams" show-filter="self.showFilter">
+		<table class="table table-scroll add-valued-component-table" ng-table="tableParams" show-filter="true">
 			<tr ng-repeat="o in $data">
 				<td data-title="'Name'"
 					sortable="'name'"
-					filter="{'name':'text'}"><input type="checkbox" ng-model="o.isChecked" ng-click="self.toggleItem(o)"/>{{o.name}}</td>
+					filter="{'name':'text'}"
+					ng-click="toggleItem(o)"><input type="checkbox" ng-checked="index(o) !== -1"/>{{resolve(o, valueString)}}</td>
 			</tr>
 		</table>
 	</section>
