Allow delete of Enforcement Actions.

--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -128,7 +128,7 @@
 						<a class="btn btn-default btn-sm" ng-click="$event.stopPropagation()">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
-						<a class="btn btn-default btn-sm" ng-click="$event.stopPropagation()">
+						<a class="btn btn-default btn-sm" ng-click="deleteAction(o);$event.stopPropagation()">
 							<span class="glyphicon glyphicon-trash"></span>
 						</a>
 					</td>
