--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -84,7 +84,7 @@
 				<td class="date-col"
 					header-class="'date-col'"
 					data-title="'Date Issued'"
-					sortable="'date'">{{o.actionDate | date:'MMM dd, yyyy'}}</td>
+					sortable="'date'">{{o.date | date:'MMM dd, yyyy'}}</td>
 				<tr ng-show="ir.enforcementActions.length == 0">
 					<td colspan="3">No Enforcement Actions found</td>
 				</tr>
