--- a/modules/project-irs/client/views/ir-add-action.html
+++ b/modules/project-irs/client/views/ir-add-action.html
@@ -10,24 +10,24 @@
 		<div class="form-group">
 			<label class="control-label">Action</label>
 			<select class="form-control" title="Type" id="action" name="action"
-					ng-model="a.action"
-					ng-init="a.action = enforcement_actions[0] || a.action"
+					ng-model="selected.action"
+					ng-init="selected.action = enforcement_actions[0] || selected.action"
 					ng-options="action for action in enforcement_actions" required></select>
 		</div>
 		<div class="form-group">
 			<label class="control-label">Status</label>
 			<select class="form-control" title="Type" id="status" name="status"
-					ng-model="a.status"
-					ng-init="a.status = enforcement_status[0] || a.status"
+					ng-model="selected.status"
+					ng-init="selected.status = enforcement_status[0] || selected.status"
 					ng-options="status for status in enforcement_status" required></select>
 		</div>
 		<div class="form-group">
 			<label>Date Issued</label>
 			<div class="form-control date-picker"
 				x-modal-date-picker 
-				x-selected-date="a.actionDate" 
-				ng-model="a.actionDate">
-				{{ a.actionDate | amDateFormat:'MMMM Do, YYYY' }}
+				x-selected-date="selected.date" 
+				ng-model="selected.date">
+				{{ selected.date | amDateFormat:'MMMM Do, YYYY' }}
 				<span class="glyphicon glyphicon-calendar"></span>
 			</div>
 		</div>
@@ -36,13 +36,13 @@
 			<button type="button"
 				x-condition-list-chooser
 				x-inspectionreport="ir"
-				x-current="s.conditions"
+				x-current="selected.conditions"
 				class="btn btn-default btn-sm"><span class="glyphicon glyphicon-link"></span><span>Link Condition</span>
 			</button>
 		</div>
 	</div>
 	<div class="modal-footer">
 		<button type="button" class="btn btn-default" ng-click="a.cancel()">Cancel</button>
-		<button type="button" class="btn btn-primary" ng-click="a.ok()">Add</button>
+		<button type="button" class="btn btn-primary" ng-click="a.ok()">Save</button>
 	</div>
 </form>
