--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-	<h1>Inspections &nbsp;&rsaquo;&nbsp; {{ir.name}}</h1>
+	<h1>Compliance Oversight &nbsp;&rsaquo;&nbsp; {{ir.name}}</h1>
 	<div class="actions">
 		<button class="btn btn-default btn-sm"
             ng-if="project.userCan.createInspectionReport"
